--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -30,10 +30,48 @@
             </div>
         </div>
         <div class='tab-pane' id='manage'>
-            Manage experiments here
+            <div data-bind='foreach: runningExperiments'>
+                <h4><span data-bind='text: status_line'></span> <span class='pull-right'><span data-bind='text: participantCount' class='badge badge-important'></span> participants</span></h4>
+                <div class='btn-group'>
+                    <a class='btn' data-bind='attr: { href: monitor_url }'><i class='icon-zoom-in'></i> monitor</a>
+                    <a class='btn confirm-experiment-action' data-content='Creates a new copy of this experiment with the same configuration and no participants.'
+                        data-bind='click: $root.cloneExperiment'><i class='icon-copy'></i> clone</a>
+                    {% comment %}
+                    FIXME: update to KO logic
+                    {% if not e.is_archived %}
+                    {% if e.participant_set.count == 0  %}
+                    <a class='btn' data-content='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'>
+                        <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants</a>
+                    <a data-content='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.' 
+                        class='btn' href='{{e.controller_url}}/register-test-participants'>
+                        <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> test participants</a>
+                    {% else %}
+                    <a data-content='Remove all participants from the experiment, including any data they may have generated.' href='{{e.controller_url}}/clear-participants' class='btn confirm-experiment-action'>
+                        <i class='icon-trash'></i> clear all participants</a>
+                    {% endif %}
+                    {% if e.is_active %}
+                    <a data-action='complete' data-content='Mark this experiment as completed' href='{{e.complete_url}}' class='btn confirm-experiment-action'><i class='icon-save'></i> archive</a>
+                    <a data-action='deactivate' data-content='deactivate this experiment' href='{{e.deactivate_url}}' class='btn confirm-experiment-action'><i class='icon-off'></i> deactivate</a>
+                    {% else %}
+                    <a class='btn' data-content='Configure this experiment' href='{{e.configure_url}}'><i class='icon-wrench'></i> configure</a>
+                    {% endif %}
+                    {% endif %}
+                    {% endcomment %}
+                </div>
+            </div>
         </div>
         <div class='tab-pane' id='archived'>
-            Archived experiments go here
+            <div data-bind='if: archivedExperiments().length == 0'>
+                No archived experiments.
+            </div>
+            <div data-bind='foreach: archivedExperiments'>
+                <h4><span data-bind='text: status_line'></span> <span class='pull-right'><span data-bind='text: participantCount' class='badge badge-important'></span> participants</span></h4>
+                <div class='btn-group'>
+                    <a class='btn' data-bind='attr: { href: monitor_url }'><i class='icon-zoom-in'></i> monitor</a>
+                    <a class='btn confirm-experiment-action' data-content='Creates a new copy of this experiment with the same configuration and no participants.'
+                        data-bind='click: $root.cloneExperiment'><i class='icon-copy'></i> clone</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
