--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -12,17 +12,16 @@
     </ul>
     <div class='tab-content'>
         <div class='tab-pane active' id='start'>
-            Experiment metadata objects go here
             <div data-bind='foreach: experimentMetadataList'>
-                <h3 data-bind='text: title'></h3>
+                <h3><span data-bind='text: title'></span> Configurations</h3>
                 <div data-bind='foreach: configurations'>
                     <div class='alert alert-message'>
                         <h4><span data-bind='text: name'>configuration name</span> (treatment id: <span data-bind='text: treatment_id() || "None"'></span>) <span class='pull-right' data-bind='text: date_created'></span></h4>
                         <span data-bind='text: number_of_rounds'></span> rounds, groups of <span data-bind='text: max_group_size'></span>
                         <br>
                         <div class='btn-group'>
-                            <a class='btn' data-bind='click: $root.createNewExperiment'><i class='icon-plus-sign'></i> new</a>
-                            <a class='btn' data-bind='click: $root.modify'><i class='icon-edit'></i> edit</a>
+                            <a class='btn' data-bind='click: $root.createNewExperiment.bind($data)'><i class='icon-plus-sign'></i> start new experiment</a>
+                            <a class='btn' data-bind='click: $root.modify'><i class='icon-edit'></i> edit configuration</a>
                         </div>
                     </div>
 
@@ -36,6 +35,13 @@
                     <a class='btn' data-bind='attr: { href: monitor_url }'><i class='icon-zoom-in'></i> monitor</a>
                     <a class='btn confirm-experiment-action' data-content='Creates a new copy of this experiment with the same configuration and no participants.'
                         data-bind='click: $root.cloneExperiment'><i class='icon-copy'></i> clone</a>
+                    <span data-bind='if: $root.canRegisterParticipants($data)'>
+                        <a class='btn' data-content='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'>
+                            <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants</a>
+                        <a data-content='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.' 
+                            class='btn' href='{{e.controller_url}}/register-test-participants'>
+                            <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> test participants</a>
+                    </span>
                     {% comment %}
                     FIXME: update to KO logic
                     {% if not e.is_archived %}
@@ -75,41 +81,6 @@
         </div>
     </div>
 </div>
-<hr>
-<div id="experiment-list">
-    {% for e in experiments %}
-    <div class='alert alert-message'>
-        <h4>{{e.status_line}} <span class='pull-right'><span class='badge badge-important'>{{e.participant_set.count}}</span> participants</span></h4>
-        <div class='btn-group'>
-            <a class='btn' href='{{e.monitor_url}}'><i class='icon-zoom-in'></i> monitor</a>
-            <a class='btn confirm-experiment-action' data-content='Creates a new copy of this experiment with the same configuration and no participants.'
-                href='{{e.clone_url}}'><i class='icon-copy'></i> clone</a>
-            {% if not e.is_archived %}
-            {% if e.participant_set.count == 0  %}
-            <a class='btn' data-content='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'>
-                <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants</a>
-            <a data-content='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.' 
-                class='btn' href='{{e.controller_url}}/register-test-participants'>
-                <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> test participants</a>
-            {% else %}
-            <a data-content='Remove all participants from the experiment, including any data they may have generated.' href='{{e.controller_url}}/clear-participants' class='btn confirm-experiment-action'>
-                <i class='icon-trash'></i> clear all participants</a>
-            {% endif %}
-            {% if e.is_active %}
-            <a data-action='complete' data-content='Mark this experiment as completed' href='{{e.complete_url}}' class='btn confirm-experiment-action'><i class='icon-save'></i> archive</a>
-            <a data-action='deactivate' data-content='deactivate this experiment' href='{{e.deactivate_url}}' class='btn confirm-experiment-action'><i class='icon-off'></i> deactivate</a>
-            {% else %}
-            <a class='btn' data-content='Configure this experiment' href='{{e.configure_url}}'><i class='icon-wrench'></i> configure</a>
-            {% endif %}
-            {% endif %}
-        </div>
-    </div>
-    {% empty %}
-    <div class='alert alert-error'>
-        You are not currently running any experiments.
-    </div>
-    {% endfor %}
-</div>
 {% endblock page %}
 {% block javascript %}
 {{ block.super }}
@@ -119,12 +90,28 @@
         function DashboardViewModel(dashboardViewModelJson) {
             var self = this;
             var model = ko.mapping.fromJS(dashboardViewModelJson);
-            model.createNewExperiment = function() {
+            model.createNewExperiment = function(configurationModel) {
                 console.debug("create new experiment from configuration");
+                console.debug(configurationModel);
+                Dajaxice.vcweb.core.create_experiment(function(data) {
+                    if (data.success) {
+                        console.debug("created new experiment: ");
+                        console.debug(data);
+                    }
+                },
+                { experiment_configuration_id: configurationModel.pk() });
+
             }
             model.modify = function() {
                 console.debug("modify existing configuration");
             }
+            model.cloneExperiment = function() {
+                console.debug("cloning experiment");
+            }
+            model.canRegisterParticipants = function(experimentModel) {
+                return ! experimentModel.isArchived() && experimentModel.participantCount() === 0;
+            }
+
             return model;
         }
         var model = new DashboardViewModel(dashboardViewModelJson);
